# project_intake_agent

./: .bugs_tracker.md  .build-context.md  .claude-context.md  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.md  docker-compose.yml  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  sync-kernel.sh  test_conversation.py  test_pdf.py
app/: config.py  main.py  ui.py
config/: scale.yaml
docs/: 04_AI_ASSISTANT_INTEGRATION.md  ARCHITECTURE.md  Agent_Cards.md  CIO_REPORT.md  DEPLOYMENT_M365.md  Exec_One_Pager.md  FAQ.md  GUARDRAILS.md  INFOSEC_REPORT.md  IT_REPORT.md  System_Maintenance_Handoff.md
skills/: GENERIC-01-product-manager-role-skill.md  GENERIC-02-architect-role-skill.md  GENERIC-03-database-manager-role-skill.md  GENERIC-04-infosec-lead-role-skill.md  GENERIC-05-devops-manager-role-skill.md  GENERIC-06-ai-engineer-role-skill.md  GENERIC-07-qa-engineer-role-skill.md  GENERIC-08-data-analyst-role-skill.md  GENERIC-09-compliance-officer-role-skill.md  GENERIC-10-marketing-manager-role-skill.md  GENERIC-11-ux-ui-designer-role-skill.md  GENERIC-12-project-lead-role-skill.md  GENERIC-AGENT-TEMPLATE-SKILL.md  GENERIC-ROLES-MASTER-GUIDE.md
tests/: test_evals.py  test_guardrails.py  test_integration.py
workflow/: 00_START_HERE.md  01_QUICK_REFERENCE.md  02_COMPLETE_GUIDE.md  03_DEPENDENCY_MANAGEMENT.md  04_AI_ASSISTANT_INTEGRATION.md  05_BUILD_CONTEXT_AND_BUGS.md  06_INFRASTRUCTURE_AS_CODE.md  07_CONFIGURATION_CONTROL.md  08_AGNOSTIC_FACTORIES.md  09_AUDIT_AND_MAINTENANCE.md  MASTER_AGENT_DISCOVERY_PROMPT.md  (+1 more)
(+28 files in other folders)
